[tool.poetry]
name = "hamiltoniancircuit"
version = "0.1.0"
description = ""
authors = ["cracksuxer <julior@keytrends.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
matplotlib = "^3.8.2"
networkx = "^3.2.1"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
rich = "^13.7.0"

[tool.poetry.scripts]
dev = "main:test"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
